--- a/bushfire_anaylisis.ipynb
+++ b/bushfire_anaylisis.ipynb
@@ -260,7 +260,7 @@
     "print(fireExist)\n",
     "df2.to_csv(\"newfiress.csv\")\n",
     "\n",
-    "\n",
+    "print('hey')\n",
     "\n",
     "\n"
    ]
